--- a/appdetails.json
+++ b/appdetails.json
@@ -1,10 +1,10 @@
 {
     "ads":"true",
     "update":[{
-      "version":"2.8.1600",
-      "title":"This app is now Open Source",
+      "version":"",
+      "title":"Note",
       "description":"The App is available at github.com/gayankuruppu/android-vpn-client-ics-openvpn",
-      "size":"https://git.io/JeY69"
+      "size":""
     }],
     "blocked":[
       {"id":0, "app":"com.android.game"},
